--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/I1820/RPi.js/issues"
   },
-  "homepage": "https://github.com/I1820/RPi.js#readme"
+  "homepage": "https://github.com/I1820/RPi.js#readme",
+  "dependencies": {
+    "mqtt": "^2.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.1.1",
+    "eslint-config-node": "^1.6.0"
+  }
 }
