--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "mqtt": "^2.9.0"
   },
   "devDependencies": {
-    "eslint": "^4.1.1",
-    "eslint-config-node": "^1.6.0"
+    "eslint": "^4.1.1"
   }
 }
