--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ibambil/rpi.js",
+  "name": "@ibamboo/rpi.js",
   "version": "2.0.0",
   "description": "Bamboo gateway library",
   "main": "index.js",
