--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/bambil/bamboo-rpi#readme",
   "dependencies": {
     "lokijs": "^1.5.0",
-    "mqtt": "^2.9.0"
+    "mqtt": "^2.9.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "^4.1.1",
