--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "@ibamboo/rpi.js",
-  "version": "2.3.0",
-  "description": "Bamboo gateway library",
+  "name": "@i1820/hub",
+  "version": "1.0.0",
+  "description": "I1820 Platform - hub library",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bambil/bamboo-rpi.git"
+    "url": "git+https://github.com/I1820/hub"
   },
   "author": "Parham Alvani <parham.alvani@gmail.com>",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/bambil/bamboo-rpi/issues"
+    "url": "https://github.com/I1820/hub/issues"
   },
-  "homepage": "https://github.com/bambil/bamboo-rpi#readme",
+  "homepage": "https://github.com/I1820/hub#readme",
   "dependencies": {
-    "lokijs": "^1.5.0",
-    "mqtt": "^2.9.0",
-    "winston": "^2.3.1"
+    "lokijs": "^1.5.5",
+    "mqtt": "^2.18.8"
   },
   "devDependencies": {
-    "eslint": "^4.1.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint": "^5.6.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
