--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@i1820/hub",
   "version": "1.2.0",
   "description": "I1820 Platform - hub library",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "eslint --color **/*.js"
+    "prepublish": "npm run build",
+    "build": "tsc",
+    "test": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -20,11 +23,8 @@
     "mqtt": "^2.18.8"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "@types/mqtt": "^2.5.0",
+    "@types/node": "^10.12.11",
+    "typescript": "^3.2.1"
   }
 }
