--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/mqtt": "^2.5.0",
     "@types/node": "^10.12.11",
     "tslint": "^5.11.0",
+    "tslint-microsoft-contrib": "^5.2.1",
     "typescript": "^3.2.1"
   }
 }
